--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "17.0.2",
     "react-chartjs-2": "^4.0.1",
     "react-dom": "17.0.2",
+    "react-draggable": "^4.4.4",
     "react-dropzone": "^12.0.4"
   },
   "devDependencies": {
