--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-dom": "^17.0.13",
     "chart.js": "^3.7.1",
     "next": "12.1.0",
     "react": "17.0.2",
+    "react-beautiful-dnd": "^13.1.0",
     "react-chartjs-2": "^4.0.1",
     "react-dom": "17.0.2",
-    "react-draggable": "^4.4.4",
     "react-dropzone": "^12.0.4"
   },
   "devDependencies": {
