--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-beautiful-dnd": "^13.1.0",
     "react-chartjs-2": "^4.0.1",
     "react-dom": "17.0.2",
-    "react-dropzone": "^12.0.4"
+    "react-dropzone": "^12.0.4",
+    "react-switch": "^6.0.0"
   },
   "devDependencies": {
     "@types/node": "17.0.21",
