--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-chartjs-2": "^4.0.1",
     "react-dom": "17.0.2",
     "react-dropzone": "^12.0.4",
+    "react-responsive-carousel": "^3.2.23",
     "react-switch": "^6.0.0"
   },
   "devDependencies": {
