--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^17.0.13",
     "chart.js": "^3.7.1",
     "next": "12.1.0",
+    "next-i18next": "^10.5.0",
     "react": "17.0.2",
     "react-beautiful-dnd": "^13.1.0",
     "react-chartjs-2": "^4.0.1",
