--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,12 @@
       "@/components/*": ["components/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "pages/_document.js"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "pages/_document.js",
+    "next-i18next.config.js"
+  ],
   "exclude": ["node_modules"]
 }
