--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.3",
+    "@prisma/client": "^3.11.1",
     "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-dom": "^17.0.13",
     "chart.js": "^3.7.1",
     "next": "12.1.0",
+    "next-auth": "^4.3.1",
     "next-i18next": "^10.5.0",
     "react": "17.0.2",
     "react-beautiful-dnd": "^13.1.0",
@@ -27,6 +30,7 @@
     "@types/react": "17.0.39",
     "eslint": "8.10.0",
     "eslint-config-next": "12.1.0",
+    "prisma": "^3.11.1",
     "typescript": "4.6.2"
   }
 }
