--- a/package.json
+++ b/package.json
@@ -11,11 +11,17 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.3",
     "@prisma/client": "^3.11.1",
+    "@types/multer": "^1.4.7",
+    "@types/multer-s3": "^2.7.11",
     "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-dom": "^17.0.13",
+    "aws-sdk": "^2.1111.0",
     "chart.js": "^3.7.1",
+    "multer": "^1.4.4",
+    "multer-s3": "^2.10.0",
     "next": "12.1.0",
     "next-auth": "^4.3.1",
+    "next-connect": "^0.12.2",
     "next-i18next": "^10.5.0",
     "react": "17.0.2",
     "react-beautiful-dnd": "^13.1.0",
