--- a/package.json
+++ b/package.json
@@ -11,12 +11,10 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.3",
     "@prisma/client": "^3.11.1",
-    "@types/multer": "^1.4.7",
-    "@types/multer-s3": "^2.7.11",
-    "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-dom": "^17.0.13",
     "aws-sdk": "^2.1111.0",
     "chart.js": "^3.7.1",
+    "file-saver": "^2.0.5",
     "multer": "^1.4.4",
     "multer-s3": "^2.10.0",
     "next": "12.1.0",
@@ -32,8 +30,12 @@
     "react-switch": "^6.0.0"
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.5",
+    "@types/multer": "^1.4.7",
+    "@types/multer-s3": "^2.7.12",
     "@types/node": "17.0.21",
     "@types/react": "17.0.39",
+    "@types/react-beautiful-dnd": "^13.1.2",
     "eslint": "8.10.0",
     "eslint-config-next": "12.1.0",
     "prisma": "^3.11.1",
