--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.3",
-    "@prisma/client": "^3.11.1",
+    "@prisma/client": "^3.13.0",
     "@types/react-dom": "^17.0.13",
     "aws-sdk": "^2.1111.0",
     "chart.js": "^3.7.1",
@@ -27,6 +27,7 @@
     "react-dom": "17.0.2",
     "react-dropzone": "^12.0.4",
     "react-responsive-carousel": "^3.2.23",
+    "react-select": "^5.3.1",
     "react-switch": "^6.0.0"
   },
   "devDependencies": {
@@ -38,7 +39,7 @@
     "@types/react-beautiful-dnd": "^13.1.2",
     "eslint": "8.10.0",
     "eslint-config-next": "12.1.0",
-    "prisma": "^3.11.1",
+    "prisma": "^3.13.0",
     "typescript": "4.6.2"
   }
 }
