--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^17.0.13",
     "aws-sdk": "^2.1111.0",
     "chart.js": "^3.7.1",
+    "cloudinary": "^1.30.0",
     "file-saver": "^2.0.5",
     "multer": "^1.4.4",
     "multer-s3": "^2.10.0",
