--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next-i18next": "^10.5.0",
     "react": "17.0.2",
     "react-beautiful-dnd": "^13.1.0",
+    "react-burger-menu": "^3.0.6",
     "react-chartjs-2": "^4.0.1",
     "react-dom": "17.0.2",
     "react-dropzone": "^12.0.4",
@@ -38,6 +39,7 @@
     "@types/node": "17.0.21",
     "@types/react": "17.0.39",
     "@types/react-beautiful-dnd": "^13.1.2",
+    "@types/react-burger-menu": "^2.8.3",
     "eslint": "8.10.0",
     "eslint-config-next": "12.1.0",
     "prisma": "^3.13.0",
