Improved some path aliases. Finished top-5 biggest files provider, it is just not working as expected since there are two state updates in FileUploader and React is only considering one as immediate. Some other additions.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,10 @@
     "jsx": "preserve",
     "incremental": true,
     "paths": {
-      "@/components/*": ["components/*"]
+      "@/components/*": ["components/*"],
+      "@/hooks/*": ["hooks/*"],
+      "@/lib/*": ["lib/*"],
+      "@/models/*": ["models/*"]
     }
   },
   "include": [
